--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main {
 }
 
 .card {
-    height: 420px;
+   
     width: 220px;
     background-color: rgba(255, 255, 255, 0.833);
     border-radius: 20px;
@@ -50,19 +50,19 @@ main {
 }
 
 .front-view {
-    height: 310px;
+   height: 100%;
     width: 100%;
     display: block;
     overflow: hidden;
+    position: relative;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
-.front-view video {
-
-    height: 100%;
+.front-view img {
+    height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: center;
@@ -70,10 +70,72 @@ main {
 }
 
 
+/* 
+#username-sec{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+   background-color: #222;
+   padding: 1rem;
+}
+.username{
+    display: block;
+    color: white;
+}
+.username p{
+    font-size: 0.5rem;
+}
+.username small{
+    font-size: 0.5rem;
+}
+button{
+    padding: 0.2rem 1rem;
+    width: fit-content;
+    background: transparent;
+    color: white;
+    border-radius: 0.6rem;
+    border: 1px solid white;
+    outline: none;
+    font-size: 0.4rem;
+}
+
+
+ */
+
+
+
+
+
+
+
+
+
+.front-view .interaction-feature{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 0.2rem;
+    
+}
+.like-section{
+    display: flex;
+    gap: 0.5rem;
+}
+.save-section{
+    display: flex;
+    gap: 0.5rem;
+}
+.feature{
+    font-size: 1.1rem;
+   
+}
+
+
 .storiyan {
     height: 110px;
     width: 100%;
-    border-bottom: 1px solid red;
+   
     padding: 15px;
     display: flex;
     align-items: center;
@@ -98,8 +160,10 @@ main {
 .storiyan .story {
     height: 80px;
     width: 80px;
-    border: 2px solid rgb(115, 12, 12);
+     border: 1px solid transparent;
     border-radius: 50%;
+   background: linear-gradient(45deg,#D09414,#9F0182,#9E0045);
+    background-clip: border-box;
     flex-shrink: 0;
     cursor: pointer;
 
@@ -113,6 +177,7 @@ main {
 .story img {
     height: 100%;
     width: 100%;
+    padding: 0.1rem;
     border-radius: 50%;
 
     object-position: center;
@@ -120,7 +185,9 @@ main {
 }
 
 .story:nth-child(1) {
-    border: 2px solid green;
+   border: 2px solid transparent;
+    background: linear-gradient(45deg,green);
+    background-clip: border-box;
 }
 
 
@@ -160,4 +227,50 @@ main {
 
     position: absolute;
 
+}
+
+.feature{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+#like {
+    font-size: 1.3rem;
+    cursor: pointer;
+    transition: 0.2s ease;
+    color: black; 
+}
+
+#like.ri-heart-fill {
+    color: red; 
+}
+
+small {
+    font-size: 0.8rem;
+}
+#save{
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: 0.2s ease;
+    color: black; 
+   
+}
+
+#save .ri-bookmark-fill{
+    color: black;
+}
+
+#center-heart{
+     font-size: 5rem;
+ background: linear-gradient(#B22BAC,#F53342,#E32256);
+ color: transparent;
+ -webkit-background-clip: text;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(10deg);
+    opacity: 0;
+    transition: all 0.4s ease-in;
 }
